temp.branch Re-build view modes of Article content type via LB in order to add classes and fix 'twig header' issue

--- a/config_files/core.entity_form_display.node.article.default.yml
+++ b/config_files/core.entity_form_display.node.article.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.field_body_via_paragraphs
     - field.field.node.article.field_custom_comments_field
+    - field.field.node.article.field_display_title
     - field.field.node.article.field_exclusive
     - field.field.node.article.field_global_tags
     - field.field.node.article.field_main_image
@@ -132,3 +133,4 @@ content:
     third_party_settings: {  }
 hidden:
   body: true
+  field_display_title: true
