--- a/config_files/core.entity_view_display.user.user.default.yml
+++ b/config_files/core.entity_view_display.user.user.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.user.user.user_picture
-    - image.style.thumbnail
+    - image.style.tall_300x480
   module:
     - image
     - user
@@ -16,6 +16,8 @@ bundle: user
 mode: default
 content:
   member_for:
+    settings: {  }
+    third_party_settings: {  }
     weight: 5
     region: content
   user_picture:
@@ -23,7 +25,7 @@ content:
     label: hidden
     settings:
       image_link: content
-      image_style: thumbnail
+      image_style: tall_300x480
     third_party_settings: {  }
     weight: 0
     region: content
