--- a/config_files/core.entity_form_display.node.category_page.default.yml
+++ b/config_files/core.entity_form_display.node.category_page.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.category_page.field_category
+    - field.field.node.category_page.field_display_title
     - node.type.category_page
   module:
     - path
@@ -73,4 +74,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_display_title: true
