--- a/config_files/core.entity_view_display.node.category_page.default.yml
+++ b/config_files/core.entity_view_display.node.category_page.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.category_page.field_category
+    - field.field.node.category_page.field_display_title
     - node.type.category_page
     - system.menu.main
     - system.menu.menupage-menu
@@ -108,13 +109,14 @@ third_party_settings:
             configuration:
               id: 'views_block:article_by_category-block_1'
               label: ''
-              label_display: visible
+              label_display: '0'
               provider: views
               context_mapping: {  }
               views_label: ''
               items_per_page: none
             weight: 0
-            additional: {  }
+            additional:
+              layout_builder_styles_style: ''
         third_party_settings: {  }
 id: node.category_page.default
 targetEntityType: node
@@ -134,4 +136,5 @@ content:
     third_party_settings: {  }
     weight: 100
     region: content
-hidden: {  }
+hidden:
+  field_display_title: true
