--- a/config_files/core.entity_view_display.node.category_page.teaser.yml
+++ b/config_files/core.entity_view_display.node.category_page.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.category_page.field_category
+    - field.field.node.category_page.field_display_title
     - node.type.category_page
   module:
     - user
@@ -20,3 +21,4 @@ content:
     region: content
 hidden:
   field_category: true
+  field_display_title: true
