--- a/config_files/core.entity_view_display.user.user.compact.yml
+++ b/config_files/core.entity_view_display.user.user.compact.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.user.compact
     - field.field.user.user.user_picture
-    - image.style.thumbnail
+    - image.style.user_icon_20x20_
   module:
     - image
     - user
@@ -21,7 +21,7 @@ content:
     label: hidden
     settings:
       image_link: content
-      image_style: thumbnail
+      image_style: user_icon_20x20_
     third_party_settings: {  }
     weight: 0
     region: content
