--- a/config_files/views.view.article_by_category.yml
+++ b/config_files/views.view.article_by_category.yml
@@ -24,7 +24,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: 'Article by category'
+      title: ''
       fields:
         title:
           id: title
